Fixed mobile phone layout issue

--- a/styles/source/styles.scss
+++ b/styles/source/styles.scss
@@ -210,6 +210,10 @@ li.nav-item:hover a {
         background: white !important;
     }
 
+    #landing-content {
+        background-attachment: scroll;
+    }
+
     #landing-caption h1 {
         font-size: 36px !important;
     }
